--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <div class="wrapper"> 
 
 	<div class="container-fluid">
-		<div class="bg-diagonal-line">
-		<header class="p-5">
+		<header class="p-lg-5">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<img src="//placehold.it/140x100" class="img-fluid nav-brand"></img>
 
@@ -27,24 +26,20 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-							<a href="" class="nav-link btn btn-secondary text-white d-flex align-items-center justify-content-center" id="nav-link">link</a>
+							<a href="" class="nav-link btn btn-secondary text-white d-flex align-items-center justify-content-center mx-2" id="nav-link">link</a>
 						</li>
 						<li class="nav-item">
-							<a href="" class="nav-link btn btn-secondary text-white d-flex align-items-center justify-content-center" id="nav-link">link</a>
+							<a href="" class="nav-link btn btn-secondary text-white d-flex align-items-center justify-content-center mx-2" id="nav-link">link</a>
 						</li>
 						<li class="nav-item">
-							<a href="" class="nav-link btn btn-secondary text-white d-flex align-items-center justify-content-center" id="nav-link">link</a>
+							<a href="" class="nav-link btn btn-secondary text-white d-flex align-items-center justify-content-center mx-2" id="nav-link">link</a>
 						</li>
 						<li class="nav-item">
-							<a href="" class="nav-link btn btn-secondary text-white d-flex align-items-center justify-content-center" id="nav-link">link</a>
+							<a href="" class="nav-link btn btn-secondary text-white d-flex align-items-center justify-content-center mx-2" id="nav-link">link</a>
 						</li>
 					</ul>
 				</div>
 			</nav>				
-		</header>
-		
-		<main>
-		
 			<div class="row mb-5" id="top-content">	
 				<div class="col-12 order-1 m-auto p-auto col-lg-4 order-lg-0 offset-lg-2 d-flex flex-column text-left" id="content-top">
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta inventore corporis, libero in omnis ab consequuntur quia, aut quasi laborum placeat corrupti aliquam eius temporibus reiciendis mollitia excepturi? Quaerat, velit!</p>
@@ -58,13 +53,28 @@
 					<div class="embed-responsive embed-responsive-16by9"><iframe src="https://player.vimeo.com/video/132663183?color=ff9933&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 				</div>
 			</div>
-		</div>
-			<div class="row" id="cards-content">
-				<div class="col-12 col-lg-4 mx-auto">
-					<div class="card-group">
+		</header>
+		
+		<main>
+		
+			<div class="row mb-lg-5 py-5" id="cards-content">
+				<div class="col-12 col-lg-4 mx-auto my-5 my-lg-0 position-relative">
+					<div class="card-group position-absolute">
 						<div class="card border-0 d-flex justify-content-center align-items-center">
-							<img src="//placehold.it/10x10" alt="" class="card-img-top rounded-circle w-75">
-							<div class="card-body w-75 d-flex flex-column align-items-center text-center">
+							<img src="//placehold.it/1000x1000" alt="" class="card-img-top rounded-circle">
+							<div class="card-body d-flex flex-column align-items-center text-center">
+								<h5 class="card-title p-3">Lorem, ipsum dolor.</h5>
+								<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sequi dolores dicta dolore necessitatibus reiciendis!</p>
+								<a href="" class="btn p-3 w-50">Link Out</a>
+							</div>
+						</div>	
+					</div>
+				</div>
+				<div class="col-12 col-lg-4 mx-auto my-5 my-lg-0 position-relative">
+					<div class="card-group position-absolute">
+						<div class="card border-0 d-flex justify-content-center align-items-center">
+							<img src="//placehold.it/1000x1000" alt="" class="card-img-top rounded-circle">
+							<div class="card-body d-flex flex-column align-items-center text-center">
 								<h5 class="card-title p-3">Lorem, ipsum dolor.</h5>
 								<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sequi dolores dicta dolore necessitatibus reiciendis!</p>
 								<a href="" class="btn p-3 w-50">Link Out</a>
@@ -72,11 +82,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-12 col-lg-4 mx-auto">
-					<div class="card-group">
+				<div class="col-12 col-lg-4 mx-auto py-5 py-lg-0 position-relative">
+					<div class="card-group ">
 						<div class="card border-0 d-flex justify-content-center align-items-center">
-							<img src="//placehold.it/10x10" alt="" class="card-img-top rounded-circle w-75">
-							<div class="card-body w-75 d-flex flex-column align-items-center text-center">
+							<img src="//placehold.it/1000x1000" alt="" class="card-img-top rounded-circle">
+							<div class="card-body d-flex flex-column align-items-center text-center">
 								<h5 class="card-title p-3">Lorem, ipsum dolor.</h5>
 								<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sequi dolores dicta dolore necessitatibus reiciendis!</p>
 								<a href="" class="btn p-3 w-50">Link Out</a>
@@ -84,28 +94,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-12 col-lg-4 mx-auto">
-					<div class="card-group">
-						<div class="card border-0 d-flex justify-content-center align-items-center">
-							<img src="//placehold.it/10x10" alt="" class="card-img-top rounded-circle w-75">
-							<div class="card-body w-75 d-flex flex-column align-items-center text-center">
-								<h5 class="card-title p-3">Lorem, ipsum dolor.</h5>
-								<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sequi dolores dicta dolore necessitatibus reiciendis!</p>
-								<a href="" class="btn p-3 w-50">Link Out</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<hr class="col">
+			</div>
+			<div class="row my-5 py-5">
+				<div class="col-12" id="border-line"></div>
 			</div>
 			<div class="row d-flex justidy-content-between" id="bottom-content">
 				<div class="col-12 col-lg-4 offset-lg-1" id="bottom-img"><img class="img-fluid" src="//placehold.it/700x500" alt=""></div>
 				<div class="col-12 col-lg-4 offset-lg-2" id="bottom-text-block">
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, molestias mollitia. Omnis praesentium officia repudiandae voluptatibus vitae, et numquam sint aut minus facilis eveniet tempora aspernatur, provident fuga quo totam quisquam asperiores iure, libero veniam. Adipisci, voluptatibus. Dolor non numquam voluptates in excepturi laudantium, fugit dolorum, alias perferendis officia dolores obcaecati? Voluptas, officia aperiam, recusandae rem facilis adipisci laboriosam sequi iste ab doloremque fugiat repellendus. Laboriosam magnam excepturi veritatis neque libero obcaecati expedita quae culpa facilis. Voluptas numquam nostrum odit.</p>
 				</div>
-			</div>			
+			</div>		
 			<div class="row" id="bottom-splash">
-				<!-- GOTOANCHOR: URL:Fix Sizing for mobile and minimun bottom spacing -->
 				<div class="col-5 mx-auto mt-5 d-flex flex-column justify-content-around align-items-center">
 					<img class="img-fluid" src="logo.jpeg" alt="">
 					<h5>You'r in Mediocre Hands</h5>
