Last Commit before Grading

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 				<div class="col-12 col-lg-4 mx-auto my-5 my-lg-0 position-relative">
 					<div class="card-group position-absolute">
 						<div class="card border-0 d-flex justify-content-center align-items-center">
+
 							<img src="//placehold.it/1000x1000" alt="" class="card-img-top rounded-circle">
+
 							<div class="card-body d-flex flex-column align-items-center text-center">
 								<h5 class="card-title p-3">Lorem, ipsum dolor.</h5>
 								<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sequi dolores dicta dolore necessitatibus reiciendis!</p>
@@ -73,7 +75,9 @@
 				<div class="col-12 col-lg-4 mx-auto my-5 my-lg-0 position-relative">
 					<div class="card-group position-absolute">
 						<div class="card border-0 d-flex justify-content-center align-items-center">
+
 							<img src="//placehold.it/1000x1000" alt="" class="card-img-top rounded-circle">
+
 							<div class="card-body d-flex flex-column align-items-center text-center">
 								<h5 class="card-title p-3">Lorem, ipsum dolor.</h5>
 								<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sequi dolores dicta dolore necessitatibus reiciendis!</p>
@@ -82,10 +86,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-12 col-lg-4 mx-auto py-5 py-lg-0 position-relative">
-					<div class="card-group ">
+				<div class="col-12 col-lg-4 mx-auto my-5 my-lg-0 position-relative">
+					<div class="card-group position-absolute">
 						<div class="card border-0 d-flex justify-content-center align-items-center">
+
 							<img src="//placehold.it/1000x1000" alt="" class="card-img-top rounded-circle">
+
 							<div class="card-body d-flex flex-column align-items-center text-center">
 								<h5 class="card-title p-3">Lorem, ipsum dolor.</h5>
 								<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sequi dolores dicta dolore necessitatibus reiciendis!</p>
@@ -95,9 +101,11 @@
 					</div>
 				</div>
 			</div>
+			<!-- Border line underneath cards -->
 			<div class="row my-5 py-5">
 				<div class="col-12" id="border-line"></div>
 			</div>
+
 			<div class="row d-flex justidy-content-between" id="bottom-content">
 				<div class="col-12 col-lg-4 offset-lg-1" id="bottom-img"><img class="img-fluid" src="//placehold.it/700x500" alt=""></div>
 				<div class="col-12 col-lg-4 offset-lg-2" id="bottom-text-block">
@@ -105,8 +113,8 @@
 				</div>
 			</div>		
 			<div class="row" id="bottom-splash">
-				<div class="col-5 mx-auto mt-5 d-flex flex-column justify-content-around align-items-center">
-					<img class="img-fluid" src="logo.jpeg" alt="">
+				<div class="col-5 mx-auto mt-lg-5 d-flex flex-column justify-content-around align-items-center">
+					<img class="img-fluid 30vw" src="logo.jpeg" alt="">
 					<h5>You'r in Mediocre Hands</h5>
 				</div>
 			</div>
