--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div class="container-fluid">
 		<header class="p-lg-5">
 			<nav class="navbar navbar-expand-lg navbar-light">
-				<img src="//placehold.it/140x100" class="img-fluid nav-brand"></img>
+				<img src="Logo.jpeg" class="img-fluid nav-brand"></img>
 
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -121,8 +121,8 @@
 		</main>
 
 		<footer>
-			<div class="row">
-				<div class="col-12 p-0 d-flex justify-content-between align-items-center">
+			<div class="row ">
+				<div class="col-12 col-lg-12 p-0 mx-auto d-flex flex-column flex-lg-row justify-content-between align-items-center">
 					<div class="border-bottom border-white" id="footer-element-1">
 						<a href="">
 							<i class="fab fa-twitter-square"></i>
@@ -143,7 +143,6 @@
 </div>
 		
 </body>
-
 <script src="https://kit.fontawesome.com/24e69c8a1a.js" crossorigin="anonymous"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
