--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 				</div>
 			</div>
 			<!-- Border line underneath cards -->
-			<div class="row my-5 py-5">
+			<div class="row" id="card-border-line">
 				<div class="col-12" id="border-line"></div>
 			</div>
 
-			<div class="row d-flex justidy-content-between" id="bottom-content">
+			<div class="row d-flex justidy-content-between mb-5" id="bottom-content">
 				<div class="col-12 col-lg-4 offset-lg-1" id="bottom-img"><img class="img-fluid" src="//placehold.it/700x500" alt=""></div>
 				<div class="col-12 col-lg-4 offset-lg-2" id="bottom-text-block">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, molestias mollitia. Omnis praesentium officia repudiandae voluptatibus vitae, et numquam sint aut minus facilis eveniet tempora aspernatur, provident fuga quo totam quisquam asperiores iure, libero veniam. Adipisci, voluptatibus. Dolor non numquam voluptates in excepturi laudantium, fugit dolorum, alias perferendis officia dolores obcaecati? Voluptas, officia aperiam, recusandae rem facilis adipisci laboriosam sequi iste ab doloremque fugiat repellendus. Laboriosam magnam excepturi veritatis neque libero obcaecati expedita quae culpa facilis. Voluptas numquam nostrum odit.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, molestias mollitia. Omnis praesentium officia repudiandae voluptatibus vitae, et numquam sint aut minus facilis eveniet tempora aspernatur, provident fuga quo totam quisquam asperiores iure, libero veniam. Adipisci, voluptatibus. Dolor non numquam voluptates in excepturi laudantium, fugit dolorum, alias perferendis officia dolores obcaecati? Voluptas, officia aperiam, recusandae rem facilis adipisci laboriosam sequi iste ab doloremque fugiat repellendus.</p>
 				</div>
 			</div>		
 			<div class="row" id="bottom-splash">
@@ -121,7 +121,7 @@
 		</main>
 
 		<footer>
-			<div class="row ">
+			<div class="row">
 				<div class="col-12 col-lg-12 p-0 mx-auto d-flex flex-column flex-lg-row justify-content-between align-items-center">
 					<div class="border-bottom border-white" id="footer-element-1">
 						<a href="">
