Fixed logo link in index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		</div>		
 		<div class="row" id="bottom-splash">
 			<div class="col-5 mx-auto mt-lg-5 d-flex flex-column justify-content-center align-items-center text-center">
-				<img class="img-fluid 30vw" src="logo.jpeg" alt="">
+				<img class="img-fluid 30vw" src="Logo.jpeg" alt="">
 				<h5>You'r in Mediocre Hands</h5>
 			</div>
 		</div>
